# ccusage-import

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFACTORING.md  SECURITY.md  TRANSFORMATION_SUMMARY.md  ccusage_clickhouse_schema.sql  ccusage_importer.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  queries.sql  run-import.sh  sensitive-strings.txt  setup_cronjob.sh  tsconfig.json  verify_setup.sh  vitest.config.ts
.claude/: ralph-circuit.local.json
.github/workflows/: ci.yml
ccusage_import/: __init__.py  cli.py  clickhouse_client.py  config.py  constants.py  data_fetcher.py  data_parser.py  exceptions.py  importer.py  logger.py  models.py  retry.py  ui.py
ccusage_importer/: config.py  database.py  fetchers.py  parsers.py  ui.py
docs/: ARCHITECTURE.md  INDEX.md  core-memory.md  migrate_add_source.sql  queries.sql
docs/archive/: README_TYPESCRIPT.md  TYPESCRIPT_MIGRATION.md  install.sh  setup_cronjob.sh  verify_setup.sh
docs/archive/python/: .pre-commit-config.yaml  ccusage_importer.py  main.py  pyproject.toml
docs/archive/python/tests/: test_ccusage_importer.py  test_exception_handling.py  test_final_coverage.py
docs/knowledge/: antigravity.md  core-memory.md
src/: cli.ts  constants.ts  index.ts  main.ts
src/analytics/: comparisons.ts  exports.ts  index.ts
src/config/: clickhouse.ts  importer.ts  index.ts  ui.ts
src/database/: client.ts  index.ts  repositories.ts
src/fetchers/: ccusage.ts  companion.ts  index.ts  opencode.ts  runner.ts
src/parsers/: aggregators.ts  dates.ts  hash.test.ts  hash.ts  index.ts  parsers.ts  types.ts
src/pipeline/: runner.ts  types.ts
src/scripts/: backfill-duckdb.ts  import-all.ts  migrate-single-table.ts  setup-cronjob.ts
src/sinks/: clickhouse.ts  csv.ts  duckdb.ts  index.ts  schema.ts
src/sources/: antigravity.ts  ccusage.ts  companion.ts  hermes.ts  index.ts
src/types/: schemas.ts
src/ui/: index.ts
src/ui/components/: App.tsx  BarChart.tsx  ComparisonView.tsx  DataTable.example.tsx  DataTable.tsx  ImportProgress.tsx  StatisticsDashboard.tsx  StatusIndicator.tsx  Table.tsx  UsageHeatmap.tsx  index.ts
src/ui/types/: index.ts
src/ui/utils/: colors.ts  formatters.ts  formatting.ts  index.ts  tty.ts
src/utils/: IMPLEMENTATION_SUMMARY.md  README.md  index.ts  logger.ts  retry.demo.ts  retry.example.ts  retry.ts  sql.ts  timeout.ts  tokens.ts
tests/: setup.ts  test_benchmarks.py  test_ccusage_importer.py  test_e2e_integration.py  test_exception_handling.py  test_final_coverage.py  test_main.py  test_property_based.py  test_ui_formatting.py
tests/unit/: antigravity.test.ts  companion-normalize.test.ts  companion.test.ts  csv.test.ts  formatting.test.ts  hermes.test.ts  parsers.test.ts  retry.test.ts  schema.test.ts  sql.test.ts  tokens.test.ts
