[project]
name = "ccusage-import"
version = "0.1.0"
description = "Import ccusage data into ClickHouse for analytics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
